Update adjusting-world-server-properties.md